@@ -1,3 +1,8 @@
+ * When the server starts, it looks for new, staged certificates to activate. If
+   the staged set of files in 'md/staging/<domain>' is messed up, this could
+   prevent further renewals to happen. Now, when the staging set is present, but
+   could not be activated due to an error, purge the whole directory.
+
 v2.4.27
 ----------------------------------------------------------------------------------------------------
  * Fix certificate retrieval on ACME renewal to not require a 'Location:'
